[metadata]
name = adsb-track
version = 0.0.1
author = Xander Hirsch
author_email = x.hirsch@icloud.com
description = ADS-B stream recorder
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amhirsch/adsb-track
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = adsb_track
packages = find:
python_requires = >=3.7

[options.packages.find]
where = adsb_track